--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "deploy": "bash deploy.sh"
   },
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.3",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 } 
