--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Node.js server with PostgreSQL integration",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.js",
-    "deploy": "bash deploy.sh"
+    "deploy": "bash deploy.sh",
+    "build": "mkdir -p dist && cp -r src/* dist/ && cp package.json dist/ && cp package-lock.json dist/",
+    "clean": "rm -rf dist",
+    "prebuild": "npm run clean"
   },
   "dependencies": {
     "express": "^4.18.2",
