--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "server-node",
   "version": "1.0.0",
   "description": "Node.js server with PostgreSQL integration",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.js",
     "deploy": "bash deploy.sh",
-    "build": "mkdir -p dist && cp -r src/* dist/ && cp package.json dist/ && cp package-lock.json dist/",
+    "build": "rm -rf dist && mkdir -p dist && cp -r src/* dist/ && cp package*.json dist/",
     "clean": "rm -rf dist",
-    "prebuild": "npm run clean"
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -21,5 +21,6 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "private": true
 } 
