--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "deploy": "bash deploy.sh",
     "build": "rm -rf dist && mkdir -p dist && cp -r src/* dist/ && cp package*.json dist/",
     "clean": "rm -rf dist",
-    "test": "echo \"No tests specified\" && exit 0"
+    "test": "node test-api.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "cors": "^2.8.5"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
+    "axios": "^1.6.2",
     "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "private": true
-} 
+}
