--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.js",
     "deploy": "bash deploy.sh",
-    "build": "rm -rf dist && mkdir -p dist && cp -r src/* dist/ && cp package*.json dist/",
+    "build": "rm -rf dist && mkdir -p dist && cp -r src/* dist/ && cp -r public dist/ && cp package*.json dist/",
     "clean": "rm -rf dist",
     "test": "node test-api.js"
   },
