--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 node_modules/
 .env
 .DS_Store
-*.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .env.local
 .env.development.local
 .env.test.local
