--- a/package.json
+++ b/package.json
@@ -2,26 +2,18 @@
   "name": "server-node",
   "version": "1.0.0",
   "description": "Node.js server with PostgreSQL integration",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.js",
-    "deploy": "bash deploy.sh",
-    "build": "rm -rf dist && mkdir -p dist && cp -r src/* dist/ && cp -r public dist/ && cp package*.json dist/",
-    "clean": "rm -rf dist",
-    "test": "node test-api.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "axios": "^1.6.2",
     "nodemon": "^3.0.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "private": true
-}
+  }
+} 
